Bug fixed. The uncovered cards should not be selectable
- Locked event click on the uncovered card
- Added class 'is-uncovered' to the card
- Added styles 'pointer-events: none' for lock the click

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -574,6 +574,10 @@ https://github.com/animate-css/animate.css/blob/main/source/attention_seekers/sh
 	transform: rotateY(180deg);
 }
 
+.game-card.is-uncovered {
+	pointer-events: none;
+}
+
 .game-card__face {
 	width: 100%;
 	height: 100%;
